# fleure-db

./: MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
data/conf/: 00_default.yml
data/systemd/: fleure-db-makecache.service  fleure-db-makecache.timer
fleure_db/: analysis.py  cli.py  create.py  datasets.py  dates.py  globals.py  utils.py
pkg/: entry_points.txt  package.spec.in  test_requirements.txt
