# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
#
# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[metadata]
name = fleure-db
# version = ... # todo
description = An utlity to analyze updateinfo
long_description =
        fleure-db is a utility to analyze updateinfo.xml provides updates
        information for systems running RPM-based linux distributions such like
        RHEL (primary target), CentOS and Fedora.

author = Satoru SATOH
author_email = ssato@redhat.com
maintainer = Satoru SATOH
maintainer_email = ssato@redhat.com
license = GPLv3+ and MIT
url = https://github.com/ssato/fleure-db
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: Console
    Topic :: Utilities

[options]
include_package_data = True
packages = find:

# minimum dependencies.
install_requires =
        setuptools

[options.packages.find]
# where = src
exclude =
        tests
        tests.*

[options.entry_points]
console_scripts =
        fleure-db = fleure_db.cli:main

[options.data_files]
/etc/fleure/db.d =
        data/conf/00_default.yml
        data/conf/50_keywords.yml

/usr/lib/systemd/system =
        data/systemd/fleure-db-makecache.service
        data/systemd/fleure-db-makecache.timer
